--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>雷之呼吸：電力生存挑戰 V3</title>
+    <title>雷之呼吸：電力生存挑戰</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Noto+Sans+TC:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
@@ -187,7 +187,7 @@
             </div>
 
             <!-- 推進按鈕 -->
-            <button id="proceed-button" class="w-full bg-blue-600 hover:bg-blue-500 text-white font-bold py-4 px-6 rounded-lg text-xl shadow-lg transition duration-300 mt-8 mb-4">
+            <button id="proceed-button" class="w-full bg-blue-600 hover:bg-blue-500 text-white font-bold py-4 px-6 rounded-lg text-xl shadow-lg transition duration-300 mt-8 sticky bottom-4 z-10 opacity-95">
                 推進到 中午 (12:00)
             </button>
         </div>
@@ -332,6 +332,9 @@
                 screens.intro.classList.add('hidden');
                 screens.game.classList.remove('hidden');
                 renderPhase(""); // 初始情境報告為空
+
+                // V6 Change: Scroll to top
+                window.scrollTo({ top: 0, behavior: 'auto' });
             }
 
             buttons.start.addEventListener('click', startGame);
@@ -417,6 +420,9 @@
 
                 // 4. 渲染新時相
                 renderPhase(report.join("<br>"));
+
+                // V6 Change: Scroll to top
+                window.scrollTo({ top: 0, behavior: 'smooth' });
             }
 
             function useAppliance(id, category) {
